{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 1722,
  "lineage": "ce4319ed-b8c3-68f7-5ed7-77020909d637",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sec-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkInterfaces/win1-nic",
            "internal_domain_name_suffix": "dpmkguehcofuznmqtcs2rb2pga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/publicIPAddresses/tfc1-pip",
                "subnet_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/JumpBox"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-24-E3-8E",
            "name": "win1-nic",
            "private_ip_address": "10.123.3.4",
            "private_ip_addresses": [
              "10.123.3.4"
            ],
            "resource_group_name": "rg-tfc",
            "tags": {
              "BU": "IT",
              "DeployedBy": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Compute/virtualMachines/tcf-win1"
          },
          "dependencies": [
            "azurerm_public_ip.sec-publicip1",
            "azurerm_subnet.sec-subnet3",
            "azurerm_virtual_network.sec-vn",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sec-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkSecurityGroups/tfc-nsg1",
            "location": "eastus",
            "name": "tfc-nsg1",
            "resource_group_name": "rg-tfc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "BU": "IT",
              "DeployedBy": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkSecurityGroups/tfc-nsg1/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "tfc-nsg1",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-tfc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sec-nsg",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkSecurityGroups/tfc-nsg1/securityRules/AllowWeb",
            "name": "AllowWeb",
            "network_security_group_name": "tfc-nsg1",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "rg-tfc",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sec-nsg",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "sec-publicip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/publicIPAddresses/tfc1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.59.38",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tfc1-pip",
            "resource_group_name": "rg-tfc",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sec-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/web",
            "name": "web",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tfc",
            "virtual_network_name": "tcf-network"
          },
          "dependencies": [
            "azurerm_virtual_network.sec-vn",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sec-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/Data",
            "name": "Data",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tfc",
            "virtual_network_name": "tcf-network"
          },
          "dependencies": [
            "azurerm_virtual_network.sec-vn",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sec-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/JumpBox",
            "name": "JumpBox",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tfc",
            "virtual_network_name": "tcf-network"
          },
          "dependencies": [
            "azurerm_virtual_network.sec-vn",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sec-subnet-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/web",
            "network_security_group_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkSecurityGroups/tfc-nsg1",
            "subnet_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/web"
          },
          "dependencies": [
            "azurerm_network_security_group.sec-nsg",
            "azurerm_subnet.sec-subnet1",
            "azurerm_virtual_network.sec-vn",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "sec-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "50a3d81b-1387-4c8b-b590-98a5c8878f30",
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network",
            "location": "eastus",
            "name": "tcf-network",
            "resource_group_name": "rg-tfc",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/web",
                "name": "web",
                "security_group": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkSecurityGroups/tfc-nsg1"
              },
              {
                "address_prefix": "10.123.2.0/24",
                "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/Data",
                "name": "Data"
              },
              {
                "address_prefix": "10.123.3.0/24",
                "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/JumpBox",
                "name": "JumpBox"
              }
            ],
            "tags": {
              "BU": "IT",
              "DeployedBy": "Terraform"
            }
          },
          "dependencies": [
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/LBRule",
                  "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/SSHRule",
                  "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/web_rule",
                  "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/web_rule2"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/publicIPAddresses/tfc-lb-ip"
              }
            ],
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb",
            "location": "eastus",
            "name": "tfc-lb",
            "resource_group_name": "rg-tfc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "LBbackend",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend",
            "load_balancing_rules": [
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/SSHRule",
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/LBRule",
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/web_rule2",
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/web_rule"
            ],
            "loadbalancer_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb",
            "name": "LBBackend"
          },
          "dependencies": [
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "LBbackendaddress",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend",
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend/addresses/LBBackendAddress-0",
            "ip_address": "10.123.1.4",
            "name": "LBBackendAddress-0",
            "virtual_network_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network"
          },
          "dependencies": [
            "azurerm_subnet.sec-subnet1",
            "azurerm_virtual_network.sec-vn",
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_lb_backend_address_pool.LBbackend",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.lnxbld.azurerm_network_interface.sec-nic",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend",
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend/addresses/LBBackendAddress-1",
            "ip_address": "10.123.1.5",
            "name": "LBBackendAddress-1",
            "virtual_network_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network"
          },
          "dependencies": [
            "azurerm_subnet.sec-subnet1",
            "azurerm_virtual_network.sec-vn",
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_lb_backend_address_pool.LBbackend",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.lnxbld.azurerm_network_interface.sec-nic",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/probes/LBProbe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb",
            "name": "LBProbe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend"
            ],
            "backend_port": 3389,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 3389,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb",
            "name": "LBRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_lb_backend_address_pool.LBbackend",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ssh_rule",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend"
            ],
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 22,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/SSHRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb",
            "name": "SSHRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_lb_backend_address_pool.LBbackend",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_rule",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/web_rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb",
            "name": "web_rule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_lb_backend_address_pool.LBbackend",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_rule2",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/backendAddressPools/LBBackend"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 443,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb/loadBalancingRules/web_rule2",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/loadBalancers/tfc-lb",
            "name": "web_rule2",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.lbmod.azurerm_lb.lb",
            "module.lbmod.azurerm_lb_backend_address_pool.LBbackend",
            "module.lbmod.azurerm_public_ip.lb_public_ip",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lbmod",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "module.lbmod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/publicIPAddresses/tfc-lb-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "138.91.121.161",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tfc-lb-ip",
            "resource_group_name": "rg-tfc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    },
    {
      "module": "module.lnxbld",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sec-nic",
      "provider": "module.lnxbld.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkInterfaces/sec-nic-0-nic",
            "internal_domain_name_suffix": "dpmkguehcofuznmqtcs2rb2pga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/web"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-F0-37-60",
            "name": "sec-nic-0-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "rg-tfc",
            "tags": {
              "BU": "IT",
              "DeployedBy": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Compute/virtualMachines/tfc-lnc-0"
          },
          "dependencies": [
            "azurerm_subnet.sec-subnet1",
            "azurerm_virtual_network.sec-vn",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/networkInterfaces/sec-nic-1-nic",
            "internal_domain_name_suffix": "dpmkguehcofuznmqtcs2rb2pga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Network/virtualNetworks/tcf-network/subnets/web"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-31-B2-B8",
            "name": "sec-nic-1-nic",
            "private_ip_address": "10.123.1.5",
            "private_ip_addresses": [
              "10.123.1.5"
            ],
            "resource_group_name": "rg-tfc",
            "tags": {
              "BU": "IT",
              "DeployedBy": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/33f9e992-75cd-4c97-9dd9-a8ad0166de57/resourceGroups/rg-tfc/providers/Microsoft.Compute/virtualMachines/tfc-lnc-1"
          },
          "dependencies": [
            "azurerm_subnet.sec-subnet1",
            "azurerm_virtual_network.sec-vn",
            "module.resource-group.azurerm_resource_group.sec-rg"
          ]
        }
      ]
    }
  ]
}